# rbatis-derive

./: Cargo.toml  README.md
rbatis-derive/: Cargo.toml
rbatis-derive/src/: derive_schema.rs  lib.rs
scratchpad/: Cargo.toml
scratchpad/src/: main.rs
