[package]
name = "scratchpad"
version = "0.1.0"
edition = "2024"

[dependencies]
rbatis = { version = "4.6.14", features = ["rbatis-macro-driver"] }
rbatis-derive = {version = "*", path = "../rbatis-derive"}
rbs = "4.6.2"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }
